--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,18 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "infyomlabs/laravel-generator": "5.8.x-dev",
+        "laravelcollective/html": "^5.8.0",
+        "infyomlabs/adminlte-templates": "5.8.x-dev",
+        "infyomlabs/swagger-generator": "dev-master",
+        "appointer/swaggervel": "dev-master",
+        "doctrine/dbal": "~2.3"
+
+
+ 
     },
+
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
